# AIWF-Studio

./: .gitattributes  .gitignore  AGENTS.md  AIWF Studio Gradio Lab.bat  AIWF Studio Gradio Lab.vbs  AIWF Studio Pro.bat  AIWF Studio Pro.vbs  AIWF_Studio_Claude_Fable_5_Roadmap_Handoff.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Install AIWF Studio.bat  Install AIWF Studio.vbs  LICENSE  README.md  STUDIO-V5-CHANGELOG.md  STUDIO-V5-QA.bat  STUDIO-V5-README.txt  compatability.md  copy_pipeline_for_debug.bat  engines.json  install_audio_lab.bat  launch.py  launch_backend_profile.py  launch_gradio.py  launch_pro.py  plan.md  prechange-file-manifest-2026-06-13_20-52-04.csv  prechange-root-manifest-2026-06-13_20-52-04.csv  prechange-snapshot-2026-06-13_20-52-04.md  pyproject.toml  read_pipeline.py  requirements-6-13.md  requirements.txt  research-agent-plan.md  second_gui.bat  smoke_test.bat  update_frontend.bat  webui-user.bat  webui.bat  (+5 more)
aiwf/: __init__.py  app.py  app_modern.py  app_pro.py  bootstrap.py  second_gui.py
aiwf_studio_deep_research_2026-06-16/: README.md  aiwf_studio_diffusers_optimization_report.md  benchmark_prompts.json  benchmark_protocol.md  benchmark_receipt_schema.json  compatibility_matrix.csv  compatibility_matrix.md  decision_matrix.csv  default_generation_profiles.md  experimental_feature_flags.md  optimization_profile_schema.json  research.md  risks_and_mitigations.md  roadmap.md  sources.md
archive/: CHANGELOG_2026-07-07.md
docs/: ACCELERATION_EXPERIMENTS.md  AGENTIC_ASSISTANT_ROADMAP.md  ATTRIBUTION.md  AUDIO_LAB_ARCHITECTURE.md  DEPENDENCY_POLICY.md  ENGINE_ISOLATION.md  EXTENSIONS.md  FEATURES.md  GUI_READINESS.md  IMAGE_MATURITY_MATRIX.md  LOCAL_TOOL_SECURITY.md  LORA_PIPELINE_STRATEGY.md  MAINTAINER_NOTES.md  MODEL_FAMILY_SUPPORT_MATRIX.md  OLLAMA_CHAT_TENANT.md  OPTIMIZATION_FAILURES.md  OPTIMIZATION_RESEARCH_PLAN.md  PATH_CONFIGURATION.md  PIPELINE_OPTIMIZATION_AUDIT.md  ROADMAP_V2.md  RUNTIME_OVERLAY_MODEL_PATCHING.md  SDCPP_ALT_ENGINE.md  SDCPP_LOCAL_BUILD_COMMANDS.md  SDCPP_PIPELINE_REQUIREMENTS_QA.md  SECOND_GUI_WIP.md  SPRINT.md  STARTUP_BENCHMARKS.md  STUDIO_ROADMAP.md  STUDIO_V5_QA.md  TESTER_USER_GUIDE.md  TRAINING_ENGINE_ROADMAP.md  UNIFIED_LAB_WORKFLOWS.md  VIDEO_LAB_ARCHITECTURE.md  VIDEO_TOOLS.md  WAN_LOCAL_COMPONENTS.md  WORKER_PROTOCOL.md  a1111-compat-roadmap.md  benchmark_log.jsonl  testing-findings-20260625.md
engines/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
fundings/: README.md  tracker.md
outreach/: README.md  github-issues.md  reddit-local-llama.md  reddit-python.md  research.md  show-hn.md
plugins/: README.md
scripts/: README.md  bootstrap_audio_lab.py  bootstrap_engine.ps1  bootstrap_ltx.ps1  bootstrap_mmaudio.ps1  convert_gemma_gguf_to_hf.py  convert_gemma_nvfp4_to_hf.py  convert_nvfp4_to_bf16.py  ensure_default_sd15.py  ensure_pro_frontend.py  export_pipeline_qa_matrix.py  install_aiwf_studio.ps1  install_sdcpp.ps1  launch_backend_profile.ps1  launch_sdcpp.ps1  ltx_smoketest_request.json  patch_pro_frontend_sdcpp.py  patch_studio_tab.py  pipeline_readiness.py  probe_ltx_runtime.py  refactor_studio_tab.py  remap_gemma_fp8_comfy.py  run_ltx2b_diffusers_smoke.py  run_ltx_smoketest.bat  run_nvfp4_convert.bat  run_second_gui.ps1  run_tests.py  sdcpp_smoke_test.py  sdcpp_video_smoke_test.py  smoke_backend.py  smoke_image_routes.py  smoke_models_and_pipelines.py  smoke_test.bat  sort_all_models.py  verify_engine.ps1
static/: modern.css  pro_startup_loading.html  studio.js  style.css
tests/: README.md  (+39 more)
(+513 files in other folders)
