[project]
name = "aiwf-studio"
version = "0.1.0"
description = "Local-first AI image generation studio for Stable Diffusion, ControlNet, inpainting, enhancement, and Wan GGUF video"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "stable-diffusion",
    "ai-image-generation",
    "diffusers",
    "gradio",
    "controlnet",
    "inpainting",
    "image-to-video",
    "wan",
    "gguf",
    "local-ai",
    "generative-ai",
    "nvidia",
    "windows",
]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[project.scripts]
aiwf = "aiwf.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiwf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "dev: development-only diagnostics and client logging tests",
]
