[project]
name = "aiwf-studio"
version = "0.1.0"
description = "Local-first AI image generation studio for Stable Diffusion, ControlNet, inpainting, enhancement, and Wan GGUF video"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "stable-diffusion",
    "ai-image-generation",
    "diffusers",
    "gradio",
    "controlnet",
    "inpainting",
    "image-to-video",
    "wan",
    "gguf",
    "local-ai",
    "generative-ai",
    "nvidia",
    "windows",
]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[project.scripts]
aiwf = "aiwf.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiwf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "dev: development-only diagnostics and client logging tests",
]
filterwarnings = [
    'ignore:Using `httpx` with `starlette\.testclient` is deprecated.*:starlette.exceptions.StarletteDeprecationWarning',
    'ignore:builtin type .* has no __module__ attribute:DeprecationWarning',
    "ignore:The module 'mediapipe' is not installed.*:UserWarning",
    'ignore:Please import `gaussian_filter` from the `scipy\.ndimage` namespace.*:DeprecationWarning',
    'ignore:Importing from timm\.models\..* is deprecated.*:FutureWarning',
    'ignore:Overwriting tiny_vit_.* in registry with controlnet_aux.*:UserWarning',
    'ignore:Mapping deprecated model name vit_base_resnet50_384.*:UserWarning',
    'ignore:hand_and_face is deprecated.*:DeprecationWarning',
    "ignore:__array__ implementation doesn't accept a copy keyword.*:DeprecationWarning",
]
